--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Tej Application Project</title>
+    <title>Billing System Project</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <h1>TEJ Application Project</h1>
+      <h1>Billing System Project</h1>
     </header>
     <main>
       <hr
@@ -32,6 +32,7 @@
       <div class="samosa-total">
         <label>Total: <span id="samosa-total">0</span></label>
       </div>
+      
       <hr
         style="
           height: 1.2px;
